Start fleshing out new storyline

--- a/analysis/incoming_attributes_analysis.ipynb
+++ b/analysis/incoming_attributes_analysis.ipynb
@@ -25,6 +25,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": false,
     "hideCode": false,
     "hidePrompt": true,
     "scrolled": true
@@ -53,6 +54,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": false,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -106,6 +108,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -148,7 +151,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -476,7 +481,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -690,7 +697,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.concat([pre_b,pre_c,post_survey_df,pre_survey_df],axis=1)\n",
@@ -702,7 +711,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1191,7 +1202,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "value_converter2 = {\n",
@@ -1218,7 +1231,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1472,7 +1487,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1491,7 +1508,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data.drop('major',axis=1,inplace=True)"
@@ -1500,7 +1519,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "demo_columns = [\"age\",\"english.0-writing\",\"english.1-reading\",\"gender-Gender non conforming/non-binary\",\"gender-Man\",\"gender-Prefer not to answer\",\"gender-Woman\",\"year-1st year undergraduate\",\"year-2nd year undergraduate\",\"year-3rd year undergraduate\",\"year-4th year undergraduate\",\"second sim\",\"[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [High school level laboratory]\",\"[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [First year undergraduate physics laboratory]\",\"[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [First year undergraduate chemistry laboratory]\",\"[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [Higher level chemistry labs]\",\"similar_L\",\"similar_C\",\"same_L\",\"same_C\",\"prior_number_virtual_labs\"]\n",
@@ -1525,6 +1546,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1560,6 +1582,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1595,7 +1618,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1646,7 +1671,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data['perceivedvalue.0-boring_reversed'] = 4-data['perceivedvalue.0-boring']\n",
@@ -1657,7 +1684,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def cronbach_alpha(scores):\n",
@@ -1674,7 +1703,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1712,7 +1743,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1742,7 +1775,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "NC = 2\n",
@@ -1756,7 +1791,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1820,7 +1857,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1843,7 +1882,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "NC = 2\n",
@@ -1857,7 +1898,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1910,6 +1953,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1922,7 +1966,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1953,7 +1999,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -2008,7 +2056,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2046,7 +2096,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data['incoming_knowledge_L'] = (data['Concentration']+data['Width']+data['Wavelength'])\n",
@@ -2064,7 +2116,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2088,7 +2142,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "NC = 5\n",
@@ -2102,7 +2158,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2132,7 +2190,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# cols = ['incoming_knowledge_L','incoming_knowledge_C','incoming_knowledge_all']\n",
@@ -2153,7 +2213,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "export_data = data.copy()\n",
@@ -2183,7 +2245,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# print 'a',data[(data['PC1']>2)&(data['incoming_knowledge_L']>=6)]['sid']\n",
@@ -2195,7 +2259,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# columns = ['sid',\"Concentration\",\"Wavelength\",\"Width\",\"perceivedvalue.0-boring\",\"perceivedvalue.1-productive\",\"taskinterpretation.1-design my own experiments that can help me understand the topic at hand\",\"pocc.4-exploring the topic\"]\n",
@@ -2211,6 +2277,7 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -2251,9 +2318,9 @@
   "celltoolbar": "Hide code",
   "hide_code_all_hidden": true,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Anaconda2]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Anaconda2]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2265,7 +2332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   },
   "toc": {
    "nav_menu": {},
