Load most of data needed for storyline for easy concatenation

--- a/analysis/cvs_detector.ipynb
+++ b/analysis/cvs_detector.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -51,8 +49,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The file sperez8_beers_log_files_per_student.txt has been unpickled and loaded\n",
-      "The file sperez8_capacitor_log_files_per_student.txt has been unpickled and loaded\n"
+      "The file Sarah_beers_log_files_per_student.txt has been unpickled and loaded\n",
+      "The file Sarah_capacitor_log_files_per_student.txt has been unpickled and loaded\n"
      ]
     }
    ],
@@ -74,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_use_table(df):\n",
@@ -148,9 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_outcome_values(pts):\n",
@@ -315,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,10 +387,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "convert_axis = {\"Absorbance\":\"absorbance\",\"Concentration\":\"concentration\",\"Width\":\"cuvetteWidth\",\"Wavelength\":\"trialNumber\",\"Battery voltage\":\"trialNumber\",\"Area\":\"area\",\"Separation\":\"separation\",\"Charge\":\"charge\"}\n",
@@ -453,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -461,30 +453,24 @@
      "output_type": "stream",
      "text": [
       "table True\n",
-      "table-non consecutive 5\n",
-      "False\n",
+      "table-non consecutive True\n",
       "graph True\n",
       "graph True\n",
       "table True\n",
-      "table-non consecutive 0\n",
-      "True\n",
+      "table-non consecutive True\n",
       "graph True\n",
       "table True\n",
-      "table-non consecutive 4\n",
-      "False\n",
+      "table-non consecutive True\n",
       "graph True\n",
       "table True\n",
-      "table-non consecutive 1\n",
-      "True\n",
+      "table-non consecutive True\n",
       "graph True\n",
       "table True\n",
-      "table-non consecutive 2\n",
-      "False\n",
+      "table-non consecutive True\n",
       "graph True\n",
       "graph True\n",
       "table True\n",
-      "table-non consecutive 0\n",
-      "True\n",
+      "table-non consecutive True\n",
       "graph True\n"
      ]
     }
@@ -571,13 +557,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -623,7 +622,7 @@
        "17729162                0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,19 +639,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sperez8\\AppData\\Local\\Continuum\\Anaconda2\\lib\\site-packages\\pandas\\core\\indexing.py:465: SettingWithCopyWarning: \n",
+      "d:\\applications\\anaconda2\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n"
+      "  self.obj[item] = s\n",
+      "d:\\applications\\anaconda2\\lib\\site-packages\\ipykernel_launcher.py:35: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n"
      ]
     }
    ],
@@ -696,13 +696,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -748,7 +761,7 @@
        "17729162                1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,13 +772,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "use_wrapper_df.to_csv('use_wrapper_results.txt', sep='\\t')"
+    "use_wrapper_df.to_csv(os.path.join(BIG_FOLDER,'all_massaged_data\\\\use_wrapper_results.txt'), sep='\\t')"
    ]
   },
   {
@@ -1507,7 +1518,7 @@
    },
    "outputs": [],
    "source": [
-    "table_non_consecutive_cvs_df.to_csv('table_non_consecutive_cvs_results_2-3-4.txt', sep='\\t')"
+    "table_non_consecutive_cvs_df.to_csv(os.path.join(BIG_FOLDER,'all_massaged_data\\\\table_non_consecutive_cvs_results_2-3-4.txt'), sep='\\t')"
    ]
   },
   {
@@ -1518,10 +1529,10 @@
    },
    "outputs": [],
    "source": [
-    "table_cvs_df.to_csv('table_cvs_results.txt', sep='\\t')\n",
-    "table_non_consecutive_cvs_df.to_csv('table_non_consecutive_cvs_results.txt', sep='\\t')\n",
-    "table_intervals_df.to_csv('table_intervals_results.txt', sep='\\t')\n",
-    "graph_cvs_df.to_csv('graph_cvs_results.txt', sep='\\t')"
+    "table_cvs_df.to_csv(os.path.join(BIG_FOLDER,'all_massaged_data\\\\table_cvs_results.txt'), sep='\\t')\n",
+    "table_non_consecutive_cvs_df.to_csv(os.path.join(BIG_FOLDER,'all_massaged_data\\\\table_non_consecutive_cvs_results.txt'), sep='\\t')\n",
+    "table_intervals_df.to_csv(os.path.join(BIG_FOLDER,'all_massaged_data\\\\table_intervals_results.txt'), sep='\\t')\n",
+    "graph_cvs_df.to_csv(os.path.join(BIG_FOLDER,'all_massaged_data\\\\graph_cvs_results.txt'), sep='\\t')"
    ]
   },
   {
@@ -1872,7 +1883,7 @@
    },
    "outputs": [],
    "source": [
-    "graph_scale_cvs_df.to_csv('graph_inverse_cvs_df.txt', sep='\\t')"
+    "graph_scale_cvs_df.to_csv(os.path.join(BIG_FOLDER,'all_massaged_data\\\\graph_inverse_cvs_df.txt'), sep='\\t')"
    ]
   }
  ],
