--- a/analysis/storyline_journal_paper.ipynb
+++ b/analysis/storyline_journal_paper.ipynb
@@ -40,13 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 1\n",
+    "%aimport utils_read_parsing\n",
     "from utils_read_parsing import *\n",
     "import numpy as np\n",
     "import matplotlib\n",
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
@@ -85,59 +88,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--------  -------------  ----------  ------------  -------------  -----------  -------------  --------------\n",
-      "sid       variable       has_pre_id  has_pre_qual  has_pre_quant  has_main_id  has_main_qual  has_main_quant\n",
-      "12345678  Width          1           0             0              0            1              0\n",
-      "12345678  Concentration  0           0             1              0            0              1\n",
-      "--------  -------------  ----------  ------------  -------------  -----------  -------------  --------------\n",
-      "---  -----------  -------------  --------------  ------------  --------------  ---------------  -----  ---  -----------\n",
-      "...  pre_id_corr  pre_qual_corr  pre_quant_corr  main_id_corr  main_qual_corr  main_quant_corr  index  sim  CVS_context\n",
-      "...  1            NA             NA              NA            0               NA               2      L    table\n",
-      "...  NA           0              NA              NA            NA              0                2      L    graph\n",
-      "---  -----------  -------------  --------------  ------------  --------------  ---------------  -----  ---  -----------\n",
-      "---  ------------  -------------  ------------------\n",
-      "...  tansfer_qual  tansfer_quant  student attributes\n",
-      "...  1             1              ...\n",
-      "...  1             1              ...\n",
-      "---  ------------  -------------  ------------------\n"
+      "--------  ---  --------  -----  ------------  -----------  --------------  ------------  -----------  -------------  ----------\n",
+      "sid       sim  variable  model  pre_statment  pre_correct  main_statement  main_correct  CVS_context  tansfer_quant  attributes\n",
+      "12345678  C    Width     ident  present       1            absent          NaN           CVS_table    1              ...\n",
+      "12345678  C    Width     qual   absent        NaN          present         0             CVS_table    0              ...\n",
+      "12345678  C    Width     quant  absent        NaN          absent          NaN           CVS_table    0              ...\n",
+      "--------  ---  --------  -----  ------------  -----------  --------------  ------------  -----------  -------------  ----------\n"
      ]
     }
    ],
    "source": [
-    "t = [['sid','variable','has_pre_id', 'has_pre_qual', 'has_pre_quant', 'has_main_id', 'has_main_qual', 'has_main_quant']]\n",
-    "t.append(['12345678','Width',1,0,0,0,1,0])\n",
-    "t.append(['12345678','Concentration',0,0,1,0,0,1])\n",
-    "print tabulate(t)\n",
-    "t = [['...','pre_id_corr', 'pre_qual_corr', 'pre_quant_corr', 'main_id_corr', 'main_qual_corr', 'main_quant_corr','index','sim','CVS_context']]\n",
-    "t.append(['...',1,'NA','NA','NA',0,'NA',2,'L','table'])\n",
-    "t.append(['...','NA',0,'NA','NA','NA',0,2,'L','graph'])\n",
-    "print tabulate(t)\n",
-    "t = [['...','tansfer_qual','tansfer_quant','student attributes']]\n",
-    "t.append(['...',1,1,'...'])\n",
-    "t.append(['...',1,1,'...'])\n",
-    "print tabulate(t)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## We load all student data files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pre_survey_df = get_massaged_pre_survey()\n",
-    "post_survey_df = get_massaged_post_survey()\n",
-    "meta_df = get_student_metadata()\n",
-    "meta_worksheets_L_df = get_worksheet_metadata('beers')\n",
-    "meta_worksheets_L_df = get_worksheet_metadata('caps')\n",
-    "#     table_cvs_df = pd.read_csv('table_cvs_results.txt', sep='\\t')\n",
-    "#     graph_cvs_df = pd.read_csv('graph_cvs_results.txt', sep='\\t')"
+    "t = [['sid','sim','variable','model','pre_statment','pre_correct','main_statement','main_correct','CVS_context','tansfer_quant','attributes']]\n",
+    "t.append(['12345678','C','Width','ident','present','1','absent','NaN','CVS_table',1,'...'])\n",
+    "t.append(['12345678','C','Width','qual','absent','NaN','present','0','CVS_table',0,'...'])\n",
+    "t.append(['12345678','C','Width','quant','absent','NaN','absent','NaN','CVS_table',0,'...'])\n",
+    "print tabulate(t)"
    ]
   },
   {
@@ -147,8 +112,130 @@
     "hidePrompt": true
    },
    "source": [
-    "## Grabing the CVS data..."
+    "## Defining important variables"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 148 students to analyze.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ids = get_students_to_analyze_log()\n",
+    "N = len(ids)\n",
+    "print \"There are {0} students to analyze.\".format(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We are analyzing the modeling of these variables: Area, Separation, Width, Concentration.\n"
+     ]
+    }
+   ],
+   "source": [
+    "variables = [\"Area\",\"Separation\",\"Width\",\"Concentration\"]\n",
+    "print \"We are analyzing the modeling of these variables: {0}.\".format(', '.join(variables))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We will be analyzing cvs where table_consecutive and table_non_consecutive are merged\n",
+      "        and CVS is detected for 3 minimum trials.\n"
+     ]
+    }
+   ],
+   "source": [
+    "merged = True\n",
+    "number_of_trials = 3\n",
+    "if merged:\n",
+    "    print '''We will be analyzing cvs where table_consecutive and table_non_consecutive are merged\n",
+    "        and CVS is detected for {0} minimum trials.'''.format(number_of_trials)\n",
+    "else:\n",
+    "    print '''We will be analyzing cvs where table_consecutive and table_non_consecutive are NOT merged\n",
+    "        and CVS is detected for {0} minimum trials.'''.format(number_of_trials)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading all student data files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reload_ext utils_read_parsing\n",
+    "pre_survey_df = get_massaged_pre_survey()\n",
+    "post_survey_df = get_massaged_post_survey()\n",
+    "meta_df = get_student_metadata()\n",
+    "worksheet_df = get_massaged_worksheet_model_data()\n",
+    "cvs_df = get_cvs_results(number_of_trials,merged=merged)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We only keep the worksheet data and CVS for the variables we care about\n",
+    "worksheet_df = worksheet_df[worksheet_df['variable'].isin(variables)]\n",
+    "cvs_df = cvs_df[cvs_df['variable'].isin(variables)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -173,33 +260,17 @@
    },
    "outputs": [],
    "source": [
-    "variables = [\"Area\",\"Separation\",\"Width\",\"Concentration\",\"Wavelength\",\"Battery voltage\"]\n",
-    "\n",
     "def binarize(threshold,number):\n",
     "    if number>= threshold : return 1\n",
     "    else: return 0\n",
     "    \n",
     "# Given that we want to compare the stringency of CVS, we created different definitions with 2,3,4 points needed\n",
-    "\n",
-    "graph_cvs_2_df = graph_cvs_df.copy()\n",
-    "graph_cvs_3_df = graph_cvs_df.copy()\n",
-    "graph_cvs_4_df = graph_cvs_df.copy()\n",
-    "graph_cvs_5_df = graph_cvs_df.copy()\n",
-    "for v in variables:\n",
-    "    graph_cvs_2_df[v] = graph_cvs_df.apply(lambda row: binarize(2,row[v]), axis=1)\n",
-    "    graph_cvs_3_df[v] = graph_cvs_df.apply(lambda row: binarize(3,row[v]), axis=1)\n",
-    "    graph_cvs_4_df[v] = graph_cvs_df.apply(lambda row: binarize(4,row[v]), axis=1)\n",
-    "    graph_cvs_5_df[v] = graph_cvs_df.apply(lambda row: binarize(5,row[v]), axis=1)\n",
-    "\n",
-    "table_cvs_2_df = table_cvs_df.copy()\n",
-    "table_cvs_3_df = table_cvs_df.copy()\n",
-    "table_cvs_4_df = table_cvs_df.copy()\n",
-    "table_cvs_5_df = table_cvs_df.copy()\n",
-    "for v in variables:\n",
-    "    table_cvs_2_df[v] = table_cvs_df.apply(lambda row: binarize(2,row[v]), axis=1)\n",
-    "    table_cvs_3_df[v] = table_cvs_df.apply(lambda row: binarize(3,row[v]), axis=1)\n",
-    "    table_cvs_4_df[v] = table_cvs_df.apply(lambda row: binarize(4,row[v]), axis=1)\n",
-    "    table_cvs_5_df[v] = table_cvs_df.apply(lambda row: binarize(5,row[v]), axis=1)"
+    "table_cvs_2_df = table_cvs_df.copy();table_cvs_3_df = table_cvs_df.copy();table_cvs_4_df = table_cvs_df.copy()\n",
+    "graph_cvs_2_df = graph_cvs_df.copy();graph_cvs_3_df = graph_cvs_df.copy();graph_cvs_4_df = graph_cvs_df.copy()\n",
+    "graph_cvs_2_df = graph_cvs_df.copy();graph_cvs_3_df = graph_cvs_df.copy();graph_cvs_4_df = graph_cvs_df.copy()\n",
+    "for df,number_trials in [(table_cvs_2_df,2),(table_cvs_3_df,3),(table_cvs_4_df,4),(graph_cvs_2_df,2),(graph_cvs_3_df,3),(graph_cvs_4_df,4)]:\n",
+    "    for v in variables:\n",
+    "        df[v] = df.apply(lambda row: binarize(number_trials,row[v]), axis=1)"
    ]
   },
   {
@@ -212,42 +283,6 @@
    "outputs": [],
    "source": [
     "# table_intervals_df = pd.read_csv('table_intervals_results.txt', sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hideCode": true,
-    "hidePrompt": true
-   },
-   "source": [
-    "## Grabbing the worksheet data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": true,
-    "hidePrompt": true
-   },
-   "outputs": [],
-   "source": [
-    "%reload_ext utils_read_parsing\n",
-    "#grab worksheet data\n",
-    "worksheets = get_worksheet_metadata('beers')\n",
-    "pre = get_pre_worksheet(sim='beers')\n",
-    "main = get_main_worksheet(sim='beers')\n",
-    "\n",
-    "ids = get_students_to_analyze_log_worksheets('beers')\n",
-    "pre= pre[pre['Student ID'].isin(worksheets[(worksheets['Type']=='p')&worksheets['Student ID'].isin(ids)]['other id'].values)]\n",
-    "main= main[main['Student ID'].isin(worksheets[(worksheets['Type']=='m')&worksheets['Student ID'].isin(ids)]['other id'].values)]\n",
-    "\n",
-    "#ids in pre/post match \"other id\" in worksheet metdata so we need to assign the correct id in logs for each entry in pre/post\n",
-    "pre['sid'] = pre['Student ID'].apply(lambda row: worksheets.loc[worksheets[(worksheets['other id']==row)].index[0],'Student ID'])\n",
-    "main['sid'] = main['Student ID'].apply(lambda row: worksheets.loc[worksheets[worksheets['other id']==row].index[0],'Student ID'])\n",
-    "\n",
-    "# print len(ids),len(pre),len(main)"
    ]
   },
   {
